<resources>
    <string name="app_name">MireaProjectPractice3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_calculator">Calculator</string>
    <string name="menu_browser">Browser</string>
    <string name="menu_music">Music</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_sensors">Sensors</string>
    <string name="menu_recording">Record</string>
    <string name="menu_Settings">Settings</string>
    <string name="menu_Stories">Stories</string>
    <string name="menu_Time">Time (from the Net)</string>
    <string name="menu_Slimes">Slimes Database</string>
    <string name="menu_Maps">Maps</string>

    <string name="unknown_error_message">unknown_error</string>
    <string name="remote_error_message">remote_error</string>
    <string name="network_error_message">network_error</string>
</resources>