<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_Browser"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_browser" />

        <item
            android:id="@+id/nav_Calculator"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_calculator" />

        <item
            android:id="@+id/musicFragment"
            android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/menu_music" />

        <item
            android:id="@+id/navCamera"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/menu_camera" />

        <item
            android:id="@+id/navSensors"
            android:icon="?android:attr/fingerprintAuthDrawable"
            android:title="@string/menu_sensors" />

        <item
            android:id="@+id/navRecording"
            android:icon="@android:drawable/ic_btn_speak_now"
            android:title="@string/menu_recording" />

        <item
            android:id="@+id/navSettings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_Settings" />

        <item
            android:id="@+id/navStories"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/menu_Stories" />

        <item
            android:id="@+id/navTimeFromNet"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/menu_Time" />

        <item
            android:id="@+id/navSlimes"
            android:icon="@drawable/a00d0sdfjhs"
            android:title="@string/menu_Slimes" />
    </group>
</menu>